Add a builder for a viewport.
It allows to use a viewport in a grid. It's now also possible to own the
widget in the viewport.

The code is used to experiment with a different approach of the
implementation of a listbox.

--- a/po/wesnoth-lib/POTFILES.in
+++ b/po/wesnoth-lib/POTFILES.in
@@ -65,6 +65,7 @@ src/gui/auxiliary/window_builder/toggle_button.cpp
 src/gui/auxiliary/window_builder/toggle_panel.cpp
 src/gui/auxiliary/window_builder/tree_view.cpp
 src/gui/auxiliary/window_builder/vertical_scrollbar.cpp
+src/gui/auxiliary/window_builder/viewport.cpp
 src/gui/dialogs/addon_connect.cpp
 src/gui/dialogs/addon/description.cpp
 src/gui/dialogs/addon_list.cpp
