cb project update

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -443,6 +443,8 @@
 		<Unit filename="..\..\src\gui\auxiliary\window_builder\tree_view.hpp" />
 		<Unit filename="..\..\src\gui\auxiliary\window_builder\vertical_scrollbar.cpp" />
 		<Unit filename="..\..\src\gui\auxiliary\window_builder\vertical_scrollbar.hpp" />
+		<Unit filename="..\..\src\gui\auxiliary\window_builder\viewport.cpp" />
+		<Unit filename="..\..\src\gui\auxiliary\window_builder\viewport.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\addon\description.cpp" />
 		<Unit filename="..\..\src\gui\dialogs\addon\description.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\addon\uninstall_list.cpp" />
