Add a builder for a pane.
The code is used to experiment with a different approach of the
implementation of a listbox.

--- a/po/wesnoth-lib/POTFILES.in
+++ b/po/wesnoth-lib/POTFILES.in
@@ -51,6 +51,7 @@ src/gui/auxiliary/window_builder/label.cpp
 src/gui/auxiliary/window_builder/listbox.cpp
 src/gui/auxiliary/window_builder/minimap.cpp
 src/gui/auxiliary/window_builder/multi_page.cpp
+src/gui/auxiliary/window_builder/pane.cpp
 src/gui/auxiliary/window_builder/panel.cpp
 src/gui/auxiliary/window_builder/password_box.cpp
 src/gui/auxiliary/window_builder/progress_bar.cpp
