cb project update

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -415,6 +415,8 @@
 		<Unit filename="..\..\src\gui\auxiliary\window_builder\minimap.hpp" />
 		<Unit filename="..\..\src\gui\auxiliary\window_builder\multi_page.cpp" />
 		<Unit filename="..\..\src\gui\auxiliary\window_builder\multi_page.hpp" />
+		<Unit filename="..\..\src\gui\auxiliary\window_builder\pane.cpp" />
+		<Unit filename="..\..\src\gui\auxiliary\window_builder\pane.hpp" />
 		<Unit filename="..\..\src\gui\auxiliary\window_builder\panel.cpp" />
 		<Unit filename="..\..\src\gui\auxiliary\window_builder\panel.hpp" />
 		<Unit filename="..\..\src\gui\auxiliary\window_builder\password_box.cpp" />
