--- a/po/wesnoth-lib/POTFILES.in
+++ b/po/wesnoth-lib/POTFILES.in
@@ -47,6 +47,7 @@ src/gui/auxiliary/window_builder/helper.cpp
 src/gui/auxiliary/window_builder/horizontal_listbox.cpp
 src/gui/auxiliary/window_builder/horizontal_scrollbar.cpp
 src/gui/auxiliary/window_builder/image.cpp
+src/gui/auxiliary/window_builder/instance.cpp
 src/gui/auxiliary/window_builder/label.cpp
 src/gui/auxiliary/window_builder/listbox.cpp
 src/gui/auxiliary/window_builder/minimap.cpp
