Add a new matrix widget.
This widget is slated to replace the current listbox in the
future. The code however is only ready as proof-of-concept code, and
not usable in real code yet.

The code is used to experiment with a different approach of the
implementation of a listbox.

--- a/po/wesnoth-lib/POTFILES.in
+++ b/po/wesnoth-lib/POTFILES.in
@@ -23,6 +23,7 @@ src/gui/auxiliary/widget_definition/horizontal_scrollbar.cpp
 src/gui/auxiliary/widget_definition/image.cpp
 src/gui/auxiliary/widget_definition/label.cpp
 src/gui/auxiliary/widget_definition/listbox.cpp
+src/gui/auxiliary/widget_definition/matrix.cpp
 src/gui/auxiliary/widget_definition/minimap.cpp
 src/gui/auxiliary/widget_definition/multi_page.cpp
 src/gui/auxiliary/widget_definition/panel.cpp
@@ -50,6 +51,7 @@ src/gui/auxiliary/window_builder/image.cpp
 src/gui/auxiliary/window_builder/instance.cpp
 src/gui/auxiliary/window_builder/label.cpp
 src/gui/auxiliary/window_builder/listbox.cpp
+src/gui/auxiliary/window_builder/matrix.cpp
 src/gui/auxiliary/window_builder/minimap.cpp
 src/gui/auxiliary/window_builder/multi_page.cpp
 src/gui/auxiliary/window_builder/pane.cpp
@@ -114,6 +116,7 @@ src/gui/widgets/horizontal_scrollbar.cpp
 src/gui/widgets/image.cpp
 src/gui/widgets/label.cpp
 src/gui/widgets/listbox.cpp
+src/gui/widgets/matrix.cpp
 src/gui/widgets/list.cpp
 src/gui/widgets/minimap.cpp
 src/gui/widgets/multi_page.cpp
