cb project update

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -359,6 +359,8 @@
 		<Unit filename="..\..\src\gui\auxiliary\widget_definition\label.hpp" />
 		<Unit filename="..\..\src\gui\auxiliary\widget_definition\listbox.cpp" />
 		<Unit filename="..\..\src\gui\auxiliary\widget_definition\listbox.hpp" />
+		<Unit filename="..\..\src\gui\auxiliary\widget_definition\matrix.cpp" />
+		<Unit filename="..\..\src\gui\auxiliary\widget_definition\matrix.hpp" />
 		<Unit filename="..\..\src\gui\auxiliary\widget_definition\minimap.cpp" />
 		<Unit filename="..\..\src\gui\auxiliary\widget_definition\minimap.hpp" />
 		<Unit filename="..\..\src\gui\auxiliary\widget_definition\multi_page.cpp" />
@@ -407,10 +409,14 @@
 		<Unit filename="..\..\src\gui\auxiliary\window_builder\horizontal_scrollbar.hpp" />
 		<Unit filename="..\..\src\gui\auxiliary\window_builder\image.cpp" />
 		<Unit filename="..\..\src\gui\auxiliary\window_builder\image.hpp" />
+		<Unit filename="..\..\src\gui\auxiliary\window_builder\instance.cpp" />
+		<Unit filename="..\..\src\gui\auxiliary\window_builder\instance.hpp" />
 		<Unit filename="..\..\src\gui\auxiliary\window_builder\label.cpp" />
 		<Unit filename="..\..\src\gui\auxiliary\window_builder\label.hpp" />
 		<Unit filename="..\..\src\gui\auxiliary\window_builder\listbox.cpp" />
 		<Unit filename="..\..\src\gui\auxiliary\window_builder\listbox.hpp" />
+		<Unit filename="..\..\src\gui\auxiliary\window_builder\matrix.cpp" />
+		<Unit filename="..\..\src\gui\auxiliary\window_builder\matrix.hpp" />
 		<Unit filename="..\..\src\gui\auxiliary\window_builder\minimap.cpp" />
 		<Unit filename="..\..\src\gui\auxiliary\window_builder\minimap.hpp" />
 		<Unit filename="..\..\src\gui\auxiliary\window_builder\multi_page.cpp" />
@@ -571,6 +577,8 @@
 		<Unit filename="..\..\src\gui\widgets\list.hpp" />
 		<Unit filename="..\..\src\gui\widgets\listbox.cpp" />
 		<Unit filename="..\..\src\gui\widgets\listbox.hpp" />
+		<Unit filename="..\..\src\gui\widgets\matrix.cpp" />
+		<Unit filename="..\..\src\gui\widgets\matrix.hpp" />
 		<Unit filename="..\..\src\gui\widgets\minimap.cpp" />
 		<Unit filename="..\..\src\gui\widgets\minimap.hpp" />
 		<Unit filename="..\..\src\gui\widgets\multi_page.cpp" />
