cb project update

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -455,6 +455,8 @@
 		<Unit filename="..\..\src\gui\auxiliary\window_builder\viewport.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\addon\description.cpp" />
 		<Unit filename="..\..\src\gui\dialogs\addon\description.hpp" />
+		<Unit filename="..\..\src\gui\dialogs\addon\filter_options.cpp" />
+		<Unit filename="..\..\src\gui\dialogs\addon\filter_options.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\addon\uninstall_list.cpp" />
 		<Unit filename="..\..\src\gui\dialogs\addon\uninstall_list.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\addon_connect.cpp" />
