Move the point code to a new file and library.
Trying to offload some code into seperate libraries to improve
(re)build time.

--- a/po/wesnoth-lib/POTFILES.in
+++ b/po/wesnoth-lib/POTFILES.in
@@ -104,6 +104,7 @@ src/gui/dialogs/transient_message.cpp
 src/gui/dialogs/unit_attack.cpp
 src/gui/dialogs/unit_create.cpp
 src/gui/dialogs/wml_message.cpp
+src/gui/lib/types/point.cpp
 src/gui/widgets/button.cpp
 src/gui/widgets/container.cpp
 src/gui/widgets/control.cpp
