--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -548,6 +548,8 @@
 		<Unit filename="..\..\src\gui\dialogs\unit_create.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\wml_message.cpp" />
 		<Unit filename="..\..\src\gui\dialogs\wml_message.hpp" />
+		<Unit filename="..\..\src\gui\lib\types\point.cpp" />
+		<Unit filename="..\..\src\gui\lib\types\point.hpp" />
 		<Unit filename="..\..\src\gui\widgets\button.cpp" />
 		<Unit filename="..\..\src\gui\widgets\button.hpp" />
 		<Unit filename="..\..\src\gui\widgets\clickable.hpp" />
