--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -888,8 +888,8 @@
 		<Unit filename="..\..\src\whiteboard\action.hpp" />
 		<Unit filename="..\..\src\whiteboard\attack.cpp" />
 		<Unit filename="..\..\src\whiteboard\attack.hpp" />
-		<Unit filename="..\..\src\whiteboard\highlight_visitor.cpp" />
-		<Unit filename="..\..\src\whiteboard\highlight_visitor.hpp" />
+		<Unit filename="..\..\src\whiteboard\highlighter.cpp" />
+		<Unit filename="..\..\src\whiteboard\highlighter.hpp" />
 		<Unit filename="..\..\src\whiteboard\manager.cpp" />
 		<Unit filename="..\..\src\whiteboard\manager.hpp" />
 		<Unit filename="..\..\src\whiteboard\mapbuilder.cpp" />
