VC9 project update

--- a/projectfiles/VC9/wesnoth.vcproj
+++ b/projectfiles/VC9/wesnoth.vcproj
@@ -13481,7 +13481,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\whiteboard\highlight_visitor.cpp"
+				RelativePath="..\..\src\whiteboard\highlighter.cpp"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
@@ -13491,49 +13491,9 @@
 						ObjectFile="$(IntDir)\Whiteboard\"
 					/>
 				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						ObjectFile="$(IntDir)\Whiteboard\"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug (fast)|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						ObjectFile="$(IntDir)\Whiteboard\"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug_with_VLD|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						ObjectFile="$(IntDir)\Whiteboard\"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Test_Debug|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						ObjectFile="$(IntDir)\Whiteboard\"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Test_Release|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						ObjectFile="$(IntDir)\Whiteboard\"
-					/>
-				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="..\..\src\whiteboard\highlight_visitor.hpp"
+				RelativePath="..\..\src\whiteboard\highlighter.hpp"
 				>
 			</File>
 			<File
