Adding new files concerning new AI...
...(ai/akihara/recruitment.?pp) and new scenario for the ai_arena_small.

--- a/po/wesnoth/POTFILES.in
+++ b/po/wesnoth/POTFILES.in
@@ -3,6 +3,7 @@ src/actions.cpp
 src/addon/manager.cpp
 src/addon/validation.cpp
 src/ai/actions.cpp
+src/ai/akihara/recruitment.cpp
 src/ai/composite/ai.cpp
 src/ai/composite/aspect.cpp
 src/ai/composite/component.cpp
