--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -96,6 +96,8 @@
 		<Unit filename="..\..\src\addon\validation.hpp" />
 		<Unit filename="..\..\src\ai\actions.cpp" />
 		<Unit filename="..\..\src\ai\actions.hpp" />
+		<Unit filename="..\..\src\ai\akihara\recruitment.cpp" />
+		<Unit filename="..\..\src\ai\akihara\recruitment.hpp" />
 		<Unit filename="..\..\src\ai\composite\ai.cpp" />
 		<Unit filename="..\..\src\ai\composite\ai.hpp" />
 		<Unit filename="..\..\src\ai\composite\aspect.cpp" />
